Criando novos exercicios

--- a/exercicio/Ex022/fundo003.html
+++ b/exercicio/Ex022/fundo003.html
@@ -7,18 +7,31 @@
     <title>Posição dos Fundos</title>
     <style>
         div.bloco{
-            
+            height: 200px;
+            border: 1px solid black;
+            margin: 10px;
+            border-radius: 20px;
+            background-image: url(imagens/wallpaper003.jpg);
+        }
+        div#q1{
+            background-position: left top;
+        }
+        div#q2{
+            background-position: left center;
+        }
+        div#q3{
+            background-position: right bottom;
         }
     </style>
 </head>
 <body>
-    <div>
+    <div class="bloco" id="q1">
 
     </div>
-    <div>
+    <div class="bloco" id="q2">
 
     </div>
-    <div>
+    <div class="bloco" id="q3">
 
     </div>
 </body>
