--- a/exercicio/Ex023/tabela001.html
+++ b/exercicio/Ex023/tabela001.html
@@ -12,10 +12,14 @@
         table{
             width: 400px;
             border-collapse: collapse;
+            height: 400px;
         }
         td{
             border: 1px solid black;
             padding: 5px;
+            text-align: center;  /* Alinhamento Horizontal*/
+            vertical-align:middle ;  /* Alinhamento Vertical*/
+            
         }
     </style>
 </head>
