--- a/exercicio/Ex023/tabela002.html
+++ b/exercicio/Ex023/tabela002.html
@@ -12,6 +12,7 @@
         table{
             width: 400px;
             border-collapse: collapse;
+            position: relative;
         
         }
         th, td{
@@ -28,9 +29,17 @@
             background-color: gray;
             color: white;
         }
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
         tfoot{
             background-color: gray;
             color: white;
+        }
+        tbody > tr:nth-child(2n){
+            background-color: rgb(207, 200, 200);
         }
         td.num{
             text-align: right;
