--- a/desafio/desafio14/tabelas3.html
+++ b/desafio/desafio14/tabelas3.html
@@ -15,6 +15,10 @@
             height: 30px;
             text-align: center;
         }
+        th, td.media{
+            text-align: left;
+            background-color: gray;
+        }
     </style>
 </head>
 <body>
@@ -82,7 +86,7 @@
                 </tr>
                 <tr>
                     <th class="media" colspan="4">Média de Humanas</th>
-                    <td>0.0</td>
+                    <td class="media">0.0</td>
                 </tr>
             </tbody>
             <tfoot>
