tabelas usando div

--- a/desafio/desafio14/tabelas3.html
+++ b/desafio/desafio14/tabelas3.html
@@ -9,15 +9,26 @@
         body{
             font-family: Arial, Helvetica, sans-serif;
         }
+        thead > tr > th{
+            background-color: grey;
+            color: white;
+        }
+        table{
+            border-collapse: collapse;
+        }
         td, th{
             border: 1px solid black;
             width: 120px;
             height: 30px;
             text-align: center;
         }
-        th, td.media{
+        td.media{
+            text-align: center;
+        }
+        .media{
             text-align: left;
             background-color: gray;
+            color: white;
         }
     </style>
 </head>
@@ -30,20 +41,20 @@
             <caption> </caption>
             <thead>
                 <tr>
-                    <th rowspan="2">Área</th>
-                    <th rowspan="2">Dsciplibnas</th>
-                    <th colspan="2">Notas</th>
-                    <th rowspan="2">Média</th>
+                    <th rowspan="2" scope="col">Área</th>
+                    <th rowspan="2" scope="col">Dsciplibnas</th>
+                    <th colspan="2" scope="colgroup">Notas</th>
+                    <th rowspan="2" scope="col">Média</th>
                 </tr>
                 <tr>
-                    <th>Nota 1</th>
-                    <th>Nota 2</th>
+                    <th scope="col">Nota 1</th>
+                    <th scope="col">Nota 2</th>
                 </tr>
             </thead>
             <tbody>
                 
                 <tr>
-                    <th rowspan="4">Exatas</th>
+                    <th rowspan="4" scope="rowgroup">Exatas</th>
                     <td>Matemática</td>
                     <td>0.0</td>
                     <td>0.0</td>
@@ -68,11 +79,11 @@
                     <td>0.0</td>
                 </tr>
                 <tr>
-                    <th class="media" colspan="4">Média de Exatas</th>
-                    <td>0.0</td>
+                    <th class="media" colspan="4" scope="row">Média de Exatas</th>
+                    <td class="media">0.0</td>
                 </tr>
                 <tr>
-                    <th rowspan="2">Humanas</th>
+                    <th rowspan="2" scope="rowgroup">Humanas</th>
                     <td>História</td>
                     <td>0.0</td>
                     <td>0.0</td>
@@ -85,7 +96,7 @@
                     <td>0.0</td>
                 </tr>
                 <tr>
-                    <th class="media" colspan="4">Média de Humanas</th>
+                    <th class="media" colspan="4" scope="row">Média de Humanas</th>
                     <td class="media">0.0</td>
                 </tr>
             </tbody>
