--- a/exercicio/Ex023/tabela006.html
+++ b/exercicio/Ex023/tabela006.html
@@ -22,6 +22,7 @@
         }
         div#container{
             overflow-x: auto;
+            background-size: ;
         }
     </style>
 </head>
