--- a/exercicio/Ex024/iframe001.html
+++ b/exercicio/Ex024/iframe001.html
@@ -9,9 +9,17 @@
 <body>
     <h1>Testando o uso de um iframe</h1>
     <p>Acessando o site do 
-        
+        <!--Tamanho padrão da iframe é 300px x 150px-->
         <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
 
         para aprender a programar</p>
+
+        <p>
+            O repositório do Jefferson
+
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0"></iframe>
+
+             também é bem legal
+        </p>
 </body>
 </html>
