Colocando um paragrafo em iframe

--- a/exercicio/Ex024/iframe002.html
+++ b/exercicio/Ex024/iframe002.html
@@ -16,7 +16,10 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam laboriosam dolor modi, obcaecati cumque similique corporis repellendus ipsum quisquam labore molestias error, temporibus nemo dicta? Quo illo est expedita nulla. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas odit suscipit illum unde repellat, ullam, veritatis est accusantium, quasi itaque deleniti at hic qui ad eos atque possimus non sunt?</p>
 
-    <iframe src="pag001.html" frameborder="0" width="400px" height="400px"></iframe>
+    <iframe src="pag001.html" frameborder="0" width="400px" height="400px">
+        <p>Infelizmente o seu navegador não é compativel com isso</p>
+    </iframe>
+
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium dolor quis amet! Maxime vel nulla optio nobis repudiandae laboriosam velit in odio alias soluta? Ut quas beatae modi doloribus eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, asperiores recusandae? Aut tempore, esse, officiis maiores tempora ipsam in repellendus animi laborum consectetur ex optio, eos beatae ipsa eum assumenda.</p>
 </body>
