--- a/exercicio/Ex024/iframe003.html
+++ b/exercicio/Ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet accusantium recusandae molestiae, soluta blanditiis dolor necessitatibus repudiandae error cumque nihil culpa? Expedita inventore voluptate amet voluptatibus totam beatae, repudiandae hic! Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus tenetur maiores repellendus! Placeat qui, veniam sint reprehenderit consequatur commodi, nemo nam dolorem quas quam deleniti dignissimos consequuntur, dicta harum ipsa.</p>
 
-    <iframe src="" name="tela">
+    <iframe src="" name="tela" srcdoc="<h1>Escolhe um item acima</h1>">
         <p>Infelizmente o seu navegado não é compatível com isso!</p>
     </iframe>
 
