--- a/exercicio/Ex024/iframe003.html
+++ b/exercicio/Ex024/iframe003.html
@@ -21,9 +21,9 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati nemo eum fugiat blanditiis doloremque ducimus tenetur maiores dolorum necessitatibus aperiam! Ipsam quasi at, error quo quidem blanditiis iusto consectetur reprehenderit?</p>
 
     <ul>
-        <li><a href="iframe001.html" target="tela">Primeira página</a></li>
-        <li><a href="iframe002.html" target="tela">Segunda página</a></li>
-        <li><a href="iframe003.html" target="tela">Terceira página</a></li>
+        <li><a href="paginas-extras/pag001.html" target="tela">Primeira página</a></li>
+        <li><a href="paginas-extras/pag002.html" target="tela">Segunda página</a></li>
+        <li><a href="paginas-extras/pag003.html" target="tela">Terceira página</a></li>
     </ul>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet accusantium recusandae molestiae, soluta blanditiis dolor necessitatibus repudiandae error cumque nihil culpa? Expedita inventore voluptate amet voluptatibus totam beatae, repudiandae hic! Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus tenetur maiores repellendus! Placeat qui, veniam sint reprehenderit consequatur commodi, nemo nam dolorem quas quam deleniti dignissimos consequuntur, dicta harum ipsa.</p>
