--- a/exercicio/Ex024/iframe006.html
+++ b/exercicio/Ex024/iframe006.html
@@ -11,7 +11,13 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, provident ratione neque nisi dolores alias corporis dolorum. Praesentium consequatur neque dolorum id. Obcaecati iure doloribus nobis maiores culpa quasi beatae.</p>
     <h2>videos</h2>
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/towTpGG5dbY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
     <h2>Mapa do google</h2>
+
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.6600849522065!2d-34.8695661!3d-7.165236600000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ace9d116f3dfc1%3A0x956b52df759552a4!2sCol%C3%A9gio%20Interactivo%20-%20Unidade%20Cristo!5e0!3m2!1spt-BR!2sbr!4v1668866868237!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    <h2>mapa do waze</h2>
+
+    <iframe src="https://embed.waze.com/iframe?zoom=13&lat=-7.143241&lon=-34.899310&ct=livemap" width="600" height="450" allowfullscreen></iframe>
 </body>
 </html>
