--- a/exercicio/Ex024/iframe006.html
+++ b/exercicio/Ex024/iframe006.html
@@ -10,7 +10,7 @@
     <h1>Conteúdos denrto de iframe</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, provident ratione neque nisi dolores alias corporis dolorum. Praesentium consequatur neque dolorum id. Obcaecati iure doloribus nobis maiores culpa quasi beatae.</p>
     <h2>videos</h2>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/towTpGG5dbY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="400px" height="315" src="https://www.youtube-nocookie.com/embed/towTpGG5dbY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
     <h2>Mapa do google</h2>
 
@@ -18,6 +18,6 @@
 
     <h2>mapa do waze</h2>
 
-    <iframe src="https://embed.waze.com/iframe?zoom=13&lat=-7.143241&lon=-34.899310&ct=livemap" width="600" height="450" allowfullscreen></iframe>
+    <iframe src="https://embed.waze.com/iframe?zoom=13&lat=-7.143241&lon=-34.899310&ct=livemap" width="400" height="300" allowfullscreen></iframe>
 </body>
 </html>
