--- a/exercicio/Ex025/form001.html
+++ b/exercicio/Ex025/form001.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Meu primeiro formulário</h1>
-    <form action="cadastro.php" method="post" autocomplete="off"> <!--autocomplete desativa os nomes que foi digitado como sujestão / action, para onde vai enviar o formulário em qual linguagem -->
+    <form action="cadastro.php" method="get" autocomplete="off"> <!--autocomplete desativa os nomes que foi digitado como sujestão / action, para onde vai enviar o formulário em qual linguagem -->
         <p><label for="inome">Nome:</label> 
             <input type="text" name="nome" id="inome"></p>
         <p><label for="isobrenome">Sobrenome:</label> 
