--- a/exercicio/Ex026/mq003/index.html
+++ b/exercicio/Ex026/mq003/index.html
@@ -5,14 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Midia Query</title>
-    <style>
-        /* declaração gerais*/
-        
-        /* declarações retrato*/
-
-        /* declarações paisagem*/
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Mude a orientação do seu dispositivo</h1>
