--- a/exercicio/Ex026/mq004/index.html
+++ b/exercicio/Ex026/mq004/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Midia Query</title>
     <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css"> 
 </head>
 <body>
     <main>
         <h1>Testando Midia Queries</h1>
-        <img src="imagens/icon-phone.png" alt="Acessando via smartphone">
-        <img src="imagens/icon-tablet.png" alt="Acessando via tablet">
-        <img src="imagens/icon-print.png" alt="Versão para impressão">
-        <img src="imagens/icon-pc.png" alt="Versão para desktop">
-        <img src="imagens/icon-tv.png" alt="Versão para TV">
+        <img id="celular" src="imagens/icon-phone.png" alt="Acessando via smartphone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via tablet">
+        <img id="impressora" src="imagens/icon-print.png" alt="Versão para impressão">
+        <img id="computador" src="imagens/icon-pc.png" alt="Versão para desktop">
+        <img id="televisao" src="imagens/icon-tv.png" alt="Versão para TV">
     </main>
 </body>
 </html>
