--- a/exercicio/Ex026/mq005/index.html
+++ b/exercicio/Ex026/mq005/index.html
@@ -7,8 +7,9 @@
     <title>Midia Query</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/tela-celular.css" media="screen and (min-width: 768px)">
     </head>
-<body>
+<body onresize="mudoutamanho()">
     <header>
         <h1>Meu Site</h1>
         <i id="burgue" class="material-icons" onclick="clickMenu()">menu</i>
@@ -33,6 +34,16 @@
         </article>
     </main>
     <script>
+
+        function mudoutamanho(){
+            if(window.innerWidth >= 768){
+                itens.style.display = 'block'
+            }
+            else{
+                itens.style.display = 'none'
+            }
+        }
+
         function clickMenu(){
             if (itens.style.display == 'block') {
                 itens.style.display = 'none'
